--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,22 +7,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Remind Lists</a>
+      <a href="/" class="navbar-brand"><span><img src="favicon.ico"> </span>Re.Mind</a>
     </div>
     <div uib-collapse="$ctrl.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in $ctrl.menu" ui-sref-active="active">
-            <a ui-sref="{{item.state}}">{{item.title}}</a>
+        <li ng-repeat="item in $ctrl.menu" ng-show="$ctrl.isLoggedIn()" ui-sref-active="active">
+            <a ui-sref="{{item.state}}">
+              <i class="{{item.icon}}" aria-hidden="{{item.hidden}}">
+              </i> {{item.title}}</a>
         </li>
         <li ng-show="$ctrl.isAdmin()" ui-sref-active="active"><a ui-sref="admin">Admin</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="signup">Sign up</a></li>
-        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="login">Login</a></li>
+        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="signup"><span class="fa fa-address-card"></span> Sign up</a></li>
+        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="login"><span class="fa fa-sign-in"></span> Login</a></li>
         <li ng-show="$ctrl.isLoggedIn()"><p class="navbar-text">Hello {{ $ctrl.getCurrentUser().name }}</p> </li>
         <li ng-show="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="settings"><span class="glyphicon glyphicon-cog"></span></a></li>
-        <li ng-show="$ctrl.isLoggedIn()"><a ui-sref="logout">Logout</a></li>
+        <li ng-show="$ctrl.isLoggedIn()"><a ui-sref="logout"><span class="fa fa-sign-out"></span> Logout</a></li>
       </ul>
     </div>
   </div>
